--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/hero.png" alt="Richard hanrick" width="80" style="border-radius: 8%;">
+          <img src="./assets/images/hero.png" alt="Muhammed Abdelhamed" width="80" style="border-radius: 8%;">
         </figure>
 
         <div class="info-content">
