--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Dishna, Quna, EGYPT</address>
+              <address>6th October, EGYPT</address>
             </div>
 
           </li>
@@ -1126,7 +1126,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d57292.46892695934!2d32.762682220239995!3d26.171315970051097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x144eb62eb4d2496f%3A0x50f240bdb670aa01!2z2YLZhtin2Iwg2YLYs9mFINmC2YbYp9iMINmF2LHZg9iyINmC2YbYp9iMINmF2K3Yp9mB2LjYqSDZgtmG2Kc!5e0!3m2!1sar!2seg!4v1712053432548!5m2!1sar!2seg"
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3456.323667975883!2d30.95771067658474!3d29.954657877157085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x145858b4374565f9%3A0x7888e9334a9ef393!2s6th%20of%20October%20City%2C%20Giza%20Governorate%2C%20Egypt!5e0!3m2!1sen!2seg!4v1712053432548!5m2!1sen!2seg"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
