--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://react-js-movie-delta.vercel.app/">
+              <a href="https://movix-clone-three.vercel.app/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
