--- a/index.html
+++ b/index.html
@@ -803,6 +803,24 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://walmart-dashbord-using-angular-js.vercel.app/login">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/walmart-dashbord-using-angular-js-vercel.png" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Walmart Dashbord Using Angular.js</h3>
+
+                <!-- <p class="project-category">Full Stack using MEARN development</p> -->
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://graduation-project-walmart-clone.vercel.app/">
 
                 <figure class="project-img">
