--- a/index.html
+++ b/index.html
@@ -759,9 +759,9 @@
               <button class="active" data-filter-btn>All</button>
             </li>
 
-            <li class="filter-item">
+            <!-- <li class="filter-item">
               <button data-filter-btn>Landing Page</button>
-            </li>
+            </li> -->
 
             <li class="filter-item">
               <button data-filter-btn>Web development</button>
