--- a/index.html
+++ b/index.html
@@ -484,6 +484,10 @@
               <div class="skill-progress-bg">
                 <div class="skill-progress-fill" style="width: 50%;"></div>
               </div>
+<br>
+              <button class="form-btn" type="submit" data-form-btn>
+                <a href="/assets//MuhammedAbdelhamedResume.pdf" download="/assets/MuhammedAbdelhamedResume.pdf" style="color: beige;">Download Resume</a>
+              </button>
 
             </li>
 
