--- a/index.html
+++ b/index.html
@@ -476,13 +476,15 @@
 
             <li class="skills-item">
 
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
-                <data value="50">50%</data>
+              <div class="title-wrapper" style="display:grid;">
+                <h5 class="h5">WordPress :</h5>
+                <div class="h5">Elementor and other Page Builder - Plugins - Flatsome Theme - WooCommerce</div>
+
+                <data value="80">80%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 50%;"></div>
+                <div class="skill-progress-fill" style="width: 80%;"></div>
               </div>
 <br>
               <button class="form-btn" type="submit" data-form-btn>
@@ -611,6 +613,24 @@
                 <h3 class="project-title">ReactJs Movies Website</h3>
 
                 <p class="project-category">Front end Development</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https:///">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/uberStore.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Uber Store WordPress</h3>
+
+                <p class="project-category">Elementor - Flatsome Theme Builder</p>
 
               </a>
             </li>
