--- a/index.html
+++ b/index.html
@@ -521,12 +521,16 @@
               <button class="active" data-filter-btn>All</button>
             </li>
 
-            <!-- <li class="filter-item">
-              <button data-filter-btn>Landing Page</button>
-            </li> -->
+
 
             <li class="filter-item">
               <button data-filter-btn>Web development</button>
+            </li>
+            <li class="filter-item">
+              <button data-filter-btn>wordpress</button>
+            </li>
+            <li class="filter-item">
+              <button data-filter-btn>Landing Page</button>
             </li>
 
           </ul>
@@ -549,12 +553,16 @@
                 <button data-select-item>All</button>
               </li>
 
-              <li class="select-item">
-                <button data-select-item>Landing Page</button>
-              </li>
+
 
               <li class="select-item">
                 <button data-select-item>Web development</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>wordpress</button>
+              </li>
+              <li class="select-item">
+                <button data-select-item>Landing Page</button>
               </li>
 
             </ul>
@@ -617,7 +625,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="wordpress">
               <a href="https:///">
 
                 <figure class="project-img">
