--- a/index.html
+++ b/index.html
@@ -356,6 +356,18 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Information Technology Institute (ITI) - Ministry of Communications and
+                Information Technology (MCIT)</h4>
+
+              <span>11/2023 – 02/2024</span>
+
+              <p class="timeline-text">
+                Intensive Code Camp (ICC) - Full Stack Web Development using MEARN.
+              </p>
+
+            </li>
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Faculty of Computers and Artificial Intelligence, Sohag University</h4>
 
               <span>2019 — 2023</span>
@@ -367,18 +379,6 @@
 
             </li>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Information Technology Institute (ITI) - Ministry of Communications and
-                Information Technology (MCIT)</h4>
-
-              <span>11/2023 – 02/2024</span>
-
-              <p class="timeline-text">
-                Intensive Code Camp (ICC) - Full Stack Web Development using MEARN.
-              </p>
-
-            </li>
 
           </ol>
 
@@ -398,6 +398,18 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Afric Trust-tech Biometrics</h4>
+
+              <span>2024 — Present</span>
+
+              <p class="timeline-text">
+              Web Developer
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Information Technology Institute (ITI) - Ministry of Communications and
                 Information Technology (MCIT)</h4>
 
@@ -408,9 +420,11 @@
               </p>
 
             </li>
+
           </ol>
 
         </section>
+
 
         <section class="skill">
 
