--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.instagram.com/thisizhamid/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
