--- a/index.html
+++ b/index.html
@@ -678,6 +678,24 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://icejcom.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/icejcom.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">ICEJCOM Communication Agency</h3>
+
+                <p class="project-category">Elementor Pro Builder</p>
+
+              </a>
+            </li>
+
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://grand-caffe.vercel.app/">
 
