--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
               <button data-filter-btn>Web development</button>
             </li>
             <li class="filter-item">
-              <button data-filter-btn>wordpress</button>
+              <button data-filter-btn>Wordpress</button>
             </li>
             <li class="filter-item">
               <button data-filter-btn>Landing Page</button>
