--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
                 <button data-select-item>wordpress</button>
               </li>
               <li class="select-item">
-                <button data-select-item>Landing Page</button>
+                <button data-select-item>landing page</button>
               </li>
 
             </ul>
@@ -714,7 +714,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Landing Page">
+            <li class="project-item  active" data-filter-item data-category="landing page">
               <a href="https://cairoo.vercel.app/">
 
                 <figure class="project-img">
@@ -732,7 +732,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Landing Page">
+            <li class="project-item  active" data-filter-item data-category="landing page">
               <a href="https://money-cash.vercel.app/">
 
                 <figure class="project-img">
@@ -750,7 +750,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Landing Page">
+            <li class="project-item  active" data-filter-item data-category="landing page">
               <a href="#">
 
                 <figure class="project-img">
