--- a/index.html
+++ b/index.html
@@ -641,7 +641,25 @@
 
               </a>
             </li>
-            
+
+            <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://ebdaa.io/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/ebdaa.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Ebdaa for Interior Designs</h3>
+
+                <p class="project-category">Elementor Pro Builder</p>
+
+              </a>
+            </li>
+                        
             <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://graduation-project-walmart-clone.vercel.app/">
 
