--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>6th October, EGYPT</address>
+              <address>Nasr City, EGYPT</address>
             </div>
 
           </li>
