--- a/index.html
+++ b/index.html
@@ -224,9 +224,13 @@
 
         <section class="about-text">
           <p>
-            I'm a Full Stack Developer specializing in Node.js, Angular, React, and MongoDB with passion for learning new
-            technologies, and working with teams to create user-friendly web applications in web development. including
-            front-end technologies and back-end technologies .Eager to develope skills in a fast-paced environment.
+            A highly motivated and detail-oriented Full-Stack Developer specializing in the MEARN stack and WordPress
+            development. With extensive experience in building scalable, user-friendly web applications and custom
+            WordPress solutions, I possess a unique combination of technical expertise and creative problem-solving
+            skills. Adept at delivering high-quality, responsive designs and optimized backend systems, I am passionate
+            about crafting seamless digital experiences that align with client goals. Proven track record of completing
+            projects on time and exceeding expectations in both individual and collaborative settings.
+            
           </p>
 
           <p>
@@ -439,7 +443,7 @@
 
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Front end development :</h5>
-                <div class="h5">HTML 5 - CSS 3 - Bootstrap - TailwindCss - React.js - Anglar.js - Responsive Web Design</div>
+                <div class="h6">HTML 5 - CSS 3 - Bootstrap - TailwindCss - React.js - Anglar.js - Responsive Web Design</div>
                 <data value="80">80%</data>
               </div>
 
@@ -453,7 +457,7 @@
 
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Programming Languages :</h5>
-                <div class="h5">JavaScript - TypeScript</div>
+                <div class="h6">JavaScript - TypeScript</div>
                 <data value="70">70%</data>
               </div>
 
@@ -467,7 +471,7 @@
 
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Back end development :</h5>
-                <div class="h5">Node.js - Express.js</div>
+                <div class="h6">Node.js - Express.js</div>
                 <data value="60">60%</data>
               </div>
 
@@ -480,9 +484,25 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">Extras :</h5>
-                <div class="h5">Design Patterns - OOP - Linux - Git - Github</div>
-                <data value="70">70%</data>
+                <h5 class="h5">WordPress :</h5>
+                <div class="h6">Elementor and other Page Builder - Plugins - Flatsome Theme - WooCommerce</div>
+
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+
+            </li>
+            
+            <li class="skills-item">
+
+              <div class="title-wrapper" style="display:grid;">
+                <h5 class="h5">Networks :</h5>
+                <div class="h6">CCNA - MCSA</div>
+                <data value="75">75%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -494,24 +514,24 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">WordPress :</h5>
-                <div class="h5">Elementor and other Page Builder - Plugins - Flatsome Theme - WooCommerce</div>
-
-                <data value="80">80%</data>
+                <h5 class="h5">Extras :</h5>
+                <div class="h6">Design Patterns - OOP - Linux - Git - Github - Hosting - Deployment</div>
+                <data value="70">70%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <div class="skill-progress-fill" style="width: 70%;"></div>
               </div>
-<br>
-              <button class="form-btn" type="submit" data-form-btn>
-                <a href="/assets//MuhammedAbdelhamedResume.pdf" download="/assets/MuhammedAbdelhamedResume.pdf" style="color: beige;">Download Resume</a>
-              </button>
 
             </li>
 
-          </ul>
 
+
+          </ul>
+          <br>
+          <button class="form-btn" type="submit" data-form-btn>
+            <a href="/assets//MuhammedAbdelhamedResume.pdf" download="/assets/MuhammedAbdelhamedResume.pdf" style="color: beige;">Download Resume</a>
+          </button>
         </section>
 
       </article>
