--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Muhammed <br/> Abdelhamed</h1>
+          <h1 class="name" title="Muhammed Abdelhamed">Muhammed <br/> Abdelhamed</h1>
 
           <p class="title">Web developer</p>
         </div>
