--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
               <h4 class="h4 timeline-item-title">Afric Trust-tech Biometrics</h4>
 
-              <span>2024 — Present</span>
+              <span>04/2024 — Present</span>
 
               <p class="timeline-text">
               Web Developer
