--- a/index.html
+++ b/index.html
@@ -610,19 +610,37 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="wordpress">
-              <a href="https://teptac.com/">
+              <a href="https://drippin-eg.com/">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/TepTac Services.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/drippin-eg.png" alt="summary" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">TepTac Services</h3>
+                <h3 class="project-title">Drippin-eg Ecommerce</h3>
 
-                <p class="project-category">Elementor Pro Builder</p>
+                <p class="project-category">Wordpress - Elementor - WoodMart Theme - Payment Method Integration</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://kaldn.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/kaldn.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">kaldn E-commerce</h3>
+
+                <p class="project-category">Elementor - Wordpress - Payment Method Integration</p>
 
               </a>
             </li>
@@ -641,6 +659,42 @@
                 <h3 class="project-title">ICEJCOM Communication Agency</h3>
 
                 <p class="project-category">Elementor Pro Builder</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://teptac.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/TepTac Services.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">TepTac Services</h3>
+
+                <p class="project-category">Elementor Pro Builder</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="wordpress">
+              <a href="https://brainusey.com/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/brainusey.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Brainusey Agency</h3>
+
+                <p class="project-category">Elementor - Wordpress</p>
 
               </a>
             </li>
