--- a/index.html
+++ b/index.html
@@ -131,6 +131,12 @@
         <ul class="social-list">
 
           <li class="social-item">
+            <a href="https://wa.me/+201055846750" class="social-link">
+              <ion-icon name="logo-whatsapp"></ion-icon>
+            </a>
+          </li>
+
+          <li class="social-item">
             <a href="https://www.facebook.com/thisizhamid" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
