--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
               <span>2019 — 2023</span>
 
               <p class="timeline-text">
-                Specialization: Information Technology <br> Good | GPA (2.57)<br>
+                Specialization: Information Technology <br> Good <br>
                 Graduation Project : E Commerce Website | Excellent
               </p>
 
@@ -491,8 +491,8 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">WordPress :</h5>
-                <div class="h6">Elementor and other Page Builder - Plugins - Flatsome Theme - WooCommerce</div>
+                <h5 class="h5">CMS :</h5>
+                <div class="h6">WordPress - Elementor and other Page Builder - Plugins - Themes - WooCommerce - Wix - Shopify - Salla</div>
 
                 <data value="80">80%</data>
               </div>
