--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/drippin-eg.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/2.png" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Drippin-eg Ecommerce</h3>
@@ -641,7 +641,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/kaldn.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/4.png" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">kaldn E-commerce</h3>
@@ -659,7 +659,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/icejcom.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/3.png" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">ICEJCOM Communication Agency</h3>
@@ -677,7 +677,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/TepTac Services.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/1.png" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">TepTac Services</h3>
@@ -695,7 +695,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/brainusey.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/8.png" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Brainusey Agency</h3>
@@ -713,7 +713,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/FrontEndReactJS.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/design/6.png" alt="orizon" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">ReactJs Movies Website</h3>
@@ -731,7 +731,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/ebdaa.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/design/5.png" alt="summary" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Ebdaa for Interior Designs</h3>
@@ -749,7 +749,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/MearnStackWalmart.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/design/7.png" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Walmart Clone</h3>
@@ -767,12 +767,30 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/walmart-dashbord-using-angular-js-vercel.png" alt="finance" loading="lazy">
+                  <img src="./assets/images/design/9.png" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Walmart Dashbord Using Angular.js</h3>
 
                 <!-- <p class="project-category">Full Stack using MEARN development</p> -->
+
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://grand-caffe.vercel.app/">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/design/10.png" alt="summary" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Grand Caffe System</h3>
+
+                <p class="project-category">Front end development</p>
 
               </a>
             </li>
@@ -795,23 +813,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://grand-caffe.vercel.app/">
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/admin-dashboard.png" alt="summary" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Grand Caffe System</h3>
-
-                <p class="project-category">Front end development</p>
-
-              </a>
-            </li>
 
             <li class="project-item  active" data-filter-item data-category="landing page">
               <a href="https://cairoo.vercel.app/">
