--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Muhammed Abdelhamed">Muhammed <br/> Abdelhamed</h1>
+          <h1 class="name" title="Muhammed Abdelhamed">Muhammed Abdelhamed</h1>
 
           <p class="title">Web developer</p>
         </div>
@@ -427,7 +427,7 @@
               <span>2019 — 2023</span>
 
               <p class="timeline-text">
-                Specialization: Information Technology <br> Good <br>
+                Specialization : Information Technology <br> Overall appreciation : Good <br>
                 Graduation Project : E Commerce Website | Excellent
               </p>
 
@@ -478,7 +478,7 @@
 
               <div class="title-wrapper" style="display:grid;">
                 <h5 class="h5">Back end development :</h5>
-                <div class="h6">Node.js - Express.js</div>
+                <div class="h6">Node.js - Express.js - MongoDB - SQL</div>
                 <data value="60">60%</data>
               </div>
 
