--- a/index.html
+++ b/index.html
@@ -449,8 +449,16 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">Front end development :</h5>
-                <div class="h6">HTML 5 - CSS 3 - Bootstrap - TailwindCss - React.js - Anglar.js - Responsive Web Design</div>
+                <h5 class="h5">Front end development</h5>
+                <div class="skills">
+                  <span class="skill">HTML 5</span>
+                  <span class="skill">CSS 3</span>
+                  <span class="skill">Bootstrap</span>
+                  <span class="skill">TailwindCss</span>
+                  <span class="skill">React.js</span>
+                  <span class="skill">Anglar.js</span>
+                  <span class="skill">R W D</span>
+                </div>
                 <data value="80">80%</data>
               </div>
 
@@ -463,8 +471,11 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">Programming Languages :</h5>
-                <div class="h6">JavaScript - TypeScript</div>
+                <h5 class="h5">Programming Languages</h5>
+                <div class="skills">
+                  <span class="skill">JavaScript</span>
+                  <span class="skill">TypeScript</span>
+                </div>
                 <data value="70">70%</data>
               </div>
 
@@ -477,8 +488,13 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">Back end development :</h5>
-                <div class="h6">Node.js - Express.js - MongoDB - SQL</div>
+                <h5 class="h5">Back end development</h5>
+                <div class="skills">
+                  <span class="skill">Node.js</span>
+                  <span class="skill">Express.js</span>
+                  <span class="skill">MongoDB</span>
+                  <span class="skill">SQL</span>
+                </div>
                 <data value="60">60%</data>
               </div>
 
@@ -491,8 +507,17 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">CMS :</h5>
-                <div class="h6">WordPress - Elementor and other Page Builder - Plugins - Themes - WooCommerce - Wix - Shopify - Salla</div>
+                <h5 class="h5">CMS</h5>
+                <div class="skills">
+                  <span class="skill">WordPress</span>
+                  <span class="skill">Elementor</span>
+                  <span class="skill">Plugins</span>
+                  <span class="skill">Themes</span>
+                  <span class="skill">WooCommerce</span>
+                  <span class="skill">Wix</span>
+                  <span class="skill">Shopify</span>
+                  <span class="skill">Salla</span>
+                </div>
 
                 <data value="80">80%</data>
               </div>
@@ -507,8 +532,11 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">Networks :</h5>
-                <div class="h6">CCNA - MCSA</div>
+                <h5 class="h5">Networks</h5>
+                <div class="skills">
+                  <span class="skill">CCNA</span>
+                  <span class="skill">MCSA</span>
+                </div>
                 <data value="75">75%</data>
               </div>
 
@@ -521,8 +549,16 @@
             <li class="skills-item">
 
               <div class="title-wrapper" style="display:grid;">
-                <h5 class="h5">Extras :</h5>
-                <div class="h6">Design Patterns - OOP - Linux - Git - Github - Hosting - Deployment</div>
+                <h5 class="h5">Extras</h5>
+                <div class="skills">
+                  <span class="skill">Design Patterns</span>
+                  <span class="skill">OOP</span>
+                  <span class="skill">Linux</span>
+                  <span class="skill">Git</span>
+                  <span class="skill">Github</span>
+                  <span class="skill">Hosting</span>
+                  <span class="skill">Deployment</span>
+                </div>
                 <data value="70">70%</data>
               </div>
 
