--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
                 <div class="skills">
                   <span class="skill">CCNA</span>
                   <span class="skill">MCSA</span>
+                  <span class="skill">REDHAT</span>
                 </div>
                 <data value="75">75%</data>
               </div>
