--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
 
 
-        <section class="skill">
+        <section class="skilll">
 
           <h3 class="h3 skills-title">My skills</h3>
 
